@@ -247,6 +247,7 @@ void bind_create_torrent()
         s.attr("modification_time") = create_torrent::modification_time;
         s.attr("symlinks") = create_torrent::symlinks;
         s.attr("no_attributes") = create_torrent::no_attributes;
+        s.attr("canonical_files_no_tail_padding") = create_torrent::canonical_files_no_tail_padding;
     }
 
     {
